fixing padding values on mobile version

--- a/src/styles/_contact.scss
+++ b/src/styles/_contact.scss
@@ -26,11 +26,13 @@
             @media screen and (max-width: 767px) {
                 text-align: center;
                 font-size: 24px;
+                padding: 0;
             }
         }
 
         &__form {
             font-size: 16px;
+            padding-bottom: 30px;
 
             @media screen and (max-width: 767px) {
                 width: 96%;
